@@ -155,4 +155,6 @@ gretty {
   	reloadOnClassChange = false
   	reloadOnConfigChange = false
   	reloadOnLibChange = false
+	// debugging JVM GC
+	jvmArgs = [ '-XX:+PrintGCDetails', '-XX:+PrintGCDateStamps', '-Xloggc:gc_jvm.log' ]
 }
